2007-06-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpimagecommenteditor.[ch]: fixed spelling error.

	* app/widgets/gimpcolorpanel.[ch]: applied slightly modified patch
	from Tor Lillqvist that changes the ColorPanel to provide live
	updates (bug #451568).

2007-06-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontrollerlist.c (gimp_controller_list_init):
	use GTK_STOCK_PROPERTIES instead of GTK_STOCK_EDIT.

2007-06-27  Sven Neumann  <sven@gimp.org>

	* app/actions/image-actions.c: as suggested by the HIG, use
	Alt-Return as default shortcut for the Image Properties dialog.

2007-06-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpimagepropview.c: show the full filename instead
	of the basename and ellipsize it. The tooltip was too hard to
	discover.

2007-06-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpimagecommenteditor.[ch]: new widget derived from
	GimpImageParasiteView. Basically the code that used to live in
	image-properties-dialog.c.

	* app/dialogs/image-properties-dialog.c: use the comment editor.

2007-06-27  Sven Neumann  <sven@gimp.org>

	* app/dialogs/image-properties-dialog.c: allow to edit the comment.

	* app/widgets/gimpimageprofileview.c: enable line wrapping.

2007-06-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tile.c (tile): call gimp_drawable_update() on
	the destination drawable.

	* plug-ins/common/tiff-load.c: formatting.

2007-06-27  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimagemap.c (gimp_image_map_clear)
	(gimp_image_map_do): update the image, not the drawable so we
	avoid constantly invalidating the drawable preview.

	* app/tools/gimpimagemaptool.c (gimp_image_map_tool_response):
	invalidate the drawable preview here.

	* app/paint/gimppaintcore.c (gimp_paint_core_paste)
	(gimp_paint_core_replace): clean up drawable offset handling code.

2007-06-27  Michael Natterer  <mitch@gimp.org>
